Package Marine Hell with isolated Java state and source notices.